client-0: client UI

--- a/client/qml/qml.qrc
+++ b/client/qml/qml.qrc
@@ -6,5 +6,6 @@
         <file>ChatComponents/MessageList.qml</file>
         <file>ChatComponents/Message.qml</file>
         <file>ChatComponents/MessageTextField.qml</file>
+        <file>ChatComponents/FindMessageField.qml</file>
     </qresource>
 </RCC>
